--- a/Source_code_Version1_2/DTALite/DTALite.vcxproj
+++ b/Source_code_Version1_2/DTALite/DTALite.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -22,11 +22,12 @@
     <ProjectGuid>{5F206E44-71E6-452B-9A5A-011B5C7CE5CF}</ProjectGuid>
     <RootNamespace>DTALite</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>Static</UseOfMfc>
     <UseOfAtl>Static</UseOfAtl>
     <CharacterSet>MultiByte</CharacterSet>
@@ -34,20 +35,20 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>Static</UseOfMfc>
     <UseOfAtl>Static</UseOfAtl>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>Static</UseOfMfc>
     <UseOfAtl>Static</UseOfAtl>
     <CharacterSet>MultiByte</CharacterSet>
@@ -90,7 +91,7 @@
     <OutDir>C:\NEXTA_DTALite_SoftwareRelease</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
     <LinkIncremental>true</LinkIncremental>
-    <TargetName>DTALite_64</TargetName>
+    <TargetName>DTALite</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -158,13 +159,10 @@
     <ClCompile Include="DTALite.cpp" />
     <ClCompile Include="EmissionsOutput.cpp" />
     <ClCompile Include="LR_Optimization.cpp" />
-    <ClCompile Include="MetroSimInterface.cpp" />
     <ClCompile Include="Multi_Scenario.cpp" />
     <ClCompile Include="ODEstimation.cpp" />
     <ClCompile Include="RealTimeRouting.cpp" />
-    <ClCompile Include="ResearchCode.cpp" />
     <ClCompile Include="ShortestPath.cpp" />
-    <ClCompile Include="SignalOptimization.cpp" />
     <ClCompile Include="simulation.cpp" />
     <ClCompile Include="StatisticsOutput.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -183,7 +181,6 @@
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="GlobalData.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="SafetyPlanning.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
