remove scenario_incident

--- a/Source_code_Version1_2/NEXTA-GUI/TLite.rc
+++ b/Source_code_Version1_2/NEXTA-GUI/TLite.rc
@@ -152,17 +152,15 @@ CAPTION "Review Simulation/Assignment Settings"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Exit",IDCANCEL,387,119,50,14
-    DEFPUSHBUTTON   "Run Simulation",IDOK,281,119,94,14
-    LTEXT           "# of Iterations/Days:",IDC_STATIC,158,84,70,8
-    EDITTEXT        IDC_EDIT_Number_Iterations,158,97,45,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Run Simulation",IDOK,194,119,94,14
+    LTEXT           "# of Iterations/Days:",IDC_STATIC,194,87,70,8
+    EDITTEXT        IDC_EDIT_Number_Iterations,280,85,45,14,ES_AUTOHSCROLL
     LTEXT           "Link Traffic Flow Model:",IDC_STATIC,7,74,105,8
-    LISTBOX         IDC_LIST_SIMULATION_METHOD,7,85,130,43,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_LIST_SIMULATION_METHOD,7,85,147,43,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Demand Data Summary:",IDC_STATIC,155,7,78,8
     LISTBOX         IDC_LIST_DEMAND_LOADING_MODE,154,18,134,45,LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | WS_TABSTOP,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
     LTEXT           "Network Data Summary:",IDC_STATIC,7,7,79,8
     LISTBOX         IDC_LIST_DEMAND_LOADING_MODE2,7,18,131,45,LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | WS_TABSTOP,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
-    LTEXT           "Demand Loading Multiplier:",IDC_STATIC,246,84,86,8
-    EDITTEXT        IDC_EDIT_Demand_LoadingMultiplier,244,97,45,14,ES_AUTOHSCROLL
     LTEXT           "Traffic Management Scenario Summary:",IDC_STATIC,309,7,128,8
     LISTBOX         IDC_LIST_SCENARIO,307,19,129,45,LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | WS_TABSTOP,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
 END
@@ -717,11 +715,14 @@ IDD_DIALOG_GISLayer DIALOGEX 0, 0, 130, 393
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST_GISLAYER,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,23,116,186,WS_EX_LEFTSCROLLBAR
+    CONTROL         "",IDC_LIST_GISLAYER,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,37,116,172,WS_EX_LEFTSCROLLBAR
     CONTROL         "",IDC_LIST_FEATURE_INFO,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,219,116,168,WS_EX_LEFTSCROLLBAR
     PUSHBUTTON      "Config",IDC_BUTTON_Configuration,87,7,36,14
     PUSHBUTTON      "+",ID_VIEW_INCREASENODESIZE,7,7,12,10
     PUSHBUTTON      "-",ID_VIEW_DECREATENODESIZE,22,7,11,10
+    PUSHBUTTON      "Search",IDC_BUTTON_Search,46,7,36,14
+    LTEXT           "",IDC_ACTIVE_LAYER,62,26,61,8
+    LTEXT           "Active Layer: ",IDC_STATIC,7,26,46,8
 END
 
 IDD_UNIT_TESTING_DIALOG DIALOGEX 0, 0, 489, 180
@@ -925,17 +926,19 @@ BEGIN
     LTEXT           "Internal Coordinates:",IDC_STATIC,39,7,70,8
 END
 
-IDD_ODDEMAND_GRID_DIALOG DIALOGEX 0, 0, 715, 385
+IDD_ODDEMAND_GRID_DIALOG DIALOGEX 0, 0, 715, 137
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "OD Demand Table"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Exit",ID_GRID_QUIT,614,364,78,14
-    CONTROL         "Custom1",IDC_GRID_CTRL,"MFCGridCtrl",WS_TABSTOP,7,121,687,217
+    PUSHBUTTON      "Exit",ID_GRID_QUIT,630,113,78,14
     LTEXT           "1. Demand File List:",-1,7,7,79,8
-    CONTROL         "",IDC_DemandTypeLIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,22,435,71
-    PUSHBUTTON      "Edit Demand Meta Data File in Excel",ID_EDIT_META_DATABASE,129,7,137,14,0,WS_EX_STATICEDGE
-    LTEXT           "2. OD Demand Matrix (Read-Only): (please use other text editors to change the demand file)",-1,7,100,309,8
+    CONTROL         "",IDC_DemandFileLIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,22,346,71
+    PUSHBUTTON      "Edit Demand File List in Excel",ID_EDIT_META_DATABASE,7,94,120,14,0,WS_EX_STATICEDGE
+    CONTROL         "",IDC_DemandTypeLIST2,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,383,23,325,67
+    LTEXT           "2. Demand Type:",-1,383,7,79,8
+    PUSHBUTTON      "Edit Demand Type File in Excel",ID_EDIT_META_DATABASE4,383,93,137,14,0,WS_EX_STATICEDGE
+    PUSHBUTTON      "Edit Selected Demand File in Excel",ID_EDIT_META_DATABASE3,181,94,137,14,0,WS_EX_STATICEDGE
 END
 
 IDD_DIALOG_USER_INPUT DIALOGEX 0, 0, 316, 103
@@ -1636,7 +1639,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 708
         TOPMARGIN, 7
-        BOTTOMMARGIN, 378
+        BOTTOMMARGIN, 127
     END
 
     IDD_DIALOG_USER_INPUT, DIALOG
@@ -2207,13 +2210,6 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Delete Work Zone on Selected Link", ID_DELETE_WORKZONE
     END
-    POPUP "Crash"
-    BEGIN
-        MENUITEM "View Incident Data Table",    ID_CRASH_VIEWINCIDENTDATATABLE
-        MENUITEM SEPARATOR
-        MENUITEM "Add Incident on Selected Link", ID_LINK_ADD_INCIDENT
-        MENUITEM "Delete Incident on Selected Link", ID_CRASH_DELETEINCIDENTONSELECTEDLINK
-    END
     POPUP "VMS"
     BEGIN
         MENUITEM "View VMS Data Table",         ID_VMS_VIEWVMSDATATABLE
@@ -2229,13 +2225,6 @@ BEGIN
         MENUITEM "Add Link-based Toll",         ID_LINK_ADDLINK
         MENUITEM SEPARATOR
         MENUITEM "Delete Link-based Toll on Selected Link", ID_DELETE_LINK
-    END
-    POPUP "Generic Control"
-    BEGIN
-        MENUITEM "View Generic Traffic Control Data Table", ID_RAMP_RAMPDATA
-        MENUITEM "Add Generic Traffic Control on Selected Link", ID_LINK_ADD_RAMPMETER
-        MENUITEM SEPARATOR
-        MENUITEM "Delete Generic Traffic Control on Selected Link", ID_DELETE_RAMPMETER
     END
     POPUP "Grid"
     BEGIN
