update DTALite and NEXTA

--- a/Source_code_Version1_2/DTALite/DTALite.vcxproj
+++ b/Source_code_Version1_2/DTALite/DTALite.vcxproj
@@ -147,7 +147,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <EnableFiberSafeOptimizations>false</EnableFiberSafeOptimizations>
-      <OpenMPSupport>true</OpenMPSupport>
+      <OpenMPSupport>false</OpenMPSupport>
     </ClCompile>
     <Link />
   </ItemDefinitionGroup>
